@qtxr/vue-form 2.4.2 - 85: Minor style changes, including z-index fix

--- a/pkg/vue-form/style/inputs/dropdown.scss
+++ b/pkg/vue-form/style/inputs/dropdown.scss
@@ -106,7 +106,7 @@ $dropdown-params: (
 	
 			.dropdown-list {
 				display: block;
-				z-index: 100000;
+				z-index: 10000000;
 			}
 		}
 	
@@ -133,7 +133,7 @@ $dropdown-params: (
 					height: 100%;
 					background: inherit;
 					opacity: 0.8;
-					z-index: 100000;
+					z-index: 10000000;
 				}
 	
 				.dropdown-list {
